objects/cwbtool__FieldAnalysis__c.object
<CustomObject>
    <label>Field Analysis</label>
    <nameField>
        <label>Field Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Field Analysis</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <fields>
        <fullName>cwbtool__Type__c</fullName>
        <label>Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cwbtool__Label__c</fullName>
        <label>Label</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cwbtool__IsCustom__c</fullName>
        <defaultValue>false</defaultValue>
        <label>IsCustom</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>cwbtool__PopulatedOn__c</fullName>
        <label>Populated On</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>cwbtool__PopulatedOn2__c</fullName>
        <formula>IF(cwbtool__PopulatedOnPercent__c&gt;100,100,cwbtool__PopulatedOnPercent__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>PopulatedOn (%)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>cwbtool__ObjectAnalysis__c</fullName>
        <label>ObjectAnalysis</label>
        <referenceTo>cwbtool__FieldTrack__c</referenceTo>
        <relationshipLabel>Field Analysis</relationshipLabel>
        <relationshipName>Field_Analysises</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>cwbtool__PopulatedOnPercent__c</fullName>
        <formula>if( cwbtool__ObjectAnalysis__r.cwbtool__Records__c &gt;0, (  cwbtool__PopulatedOn__c  *100)/  cwbtool__ObjectAnalysis__r.cwbtool__Records__c , 0 )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>PopulatedOn (%)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
</CustomObject>